fixed detail page spacing

--- a/src/assets/scss/components/_cards-kit.scss
+++ b/src/assets/scss/components/_cards-kit.scss
@@ -80,6 +80,7 @@
 
 .kit-card-link {
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .kit-card-link-text {
